--- a/package.json
+++ b/package.json
@@ -1,14 +1,29 @@
 {
-  "name": "receive_front_ingit",
+  "name": "receive_front",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.8.0",
+    "@material-ui/icons": "^4.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "add": "^2.0.6",
+    "axios": "0.18.1",
+    "material-table": "^1.54.2",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap-table": "^4.3.1",
+    "react-crud-admin": "^1.0.48",
+    "react-data-table-component": "^6.0.2",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-modal": "^3.11.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "serialize-javascript": "2.1.1",
+    "styled-components": "^4.4.1",
+    "styled-reset": "^4.0.8",
+    "yarn": "^1.21.1"
   },
   "scripts": {
     "start": "react-scripts start",
